# c3850-mcp-server

./: README.md  activate_port.py  activate_wap.py  bounce_port_2.py  check_admin_down.py  check_port_2.py  debug_ietf_config.py  debug_interface_config.py  debug_oper_status.py  enable_port_2.py  port_2_status.txt  pyproject.toml  set_not_used_desc.py  shutdown_port.py  shutdown_wap.py  verify_filter.py  verify_import.py
src/c3850_mcp/: __init__.py  device.py  server.py
tests/: test_real_connection.py  test_server.py  test_ttl_cache.py
